users-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
spec:
  rules:
    - host: users.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-app-service
                port:
                  number: 8001
